app/src/client/components/Nav.css
nav {
  background-color: black;
  border-bottom: 1px solid #fff;
  width: 100%;
}

nav li:first-child {
  display: flex;
  align-items: center;
}

nav li:first-child a {
  border-bottom: 1px solid #333;
  color: #eee;
  font-weight: bold;
}

a.nav-link {
  color: #ccc;
  display: block;
  text-decoration: none;
  padding: 1rem 1rem;
  width: 100%;
}

.nav-link:focus,
.nav-link:hover {
  background-color: #111;
  color: #fff;
}

nav ul {
  list-style-type: none;
  margin: 0;
}

nav li {
  display: none;
  margin: 0;
}

.nav-toggle-wrapper {
  border-left: 1px solid #333;
  border-bottom: 1px solid #333;
}

.nav-toggle-wrapper:focus,
.nav-toggle-wrapper:hover {
  background-color: #111;
}

.nav-toggle {
  background-color: #eee;
  cursor: pointer;
  mask-image: url(../../../vendor/icons/angle-double-down.svg);
  mask-position: center;
  mask-repeat: no-repeat;
  mask-size: 60%;
  text-transform: uppercase;
  color: rgba(0, 0, 0, 0);
  padding: 1rem 0;
  transition: .5s ease-in-out;
  width: 32px;
}

.nav-open .nav-toggle {
  transform: rotate(180deg);
  transition: .5s ease-in-out;
}

.nav-open li {
  display: inherit;
}

/* > Phablet */
@media (min-width: 550px) {
  nav {
    /* See corresponding .app padding-top in App.css */
    margin-top: -3.5rem;
    position: fixed;
    z-index: 1;
  }

  nav li:first-child {
    display: inline-block;
  }

  nav li:first-child a {
    border: 0;
  }

  nav li {
    display: inline-block;
  }

  a.nav-link {
    display: inline-block;
    padding: .5rem 1rem;
  }

  a.nav-link:focus,
  a.nav-link:hover {
    background-color: inherit;
  }

  a.nav-link.active {
    background-clip: padding-box;
    background-color: #333;
    border-bottom: 4px solid rgba(191, 63, 191, .25);
    margin-bottom: -4px;
  }

  .nav-open li {
    display: inline-block;
  }

  .nav-toggle-wrapper {
    display: none;
  }
}

